Fix header z-index.

--- a/src/components/Menu/style.module.css
+++ b/src/components/Menu/style.module.css
@@ -142,7 +142,6 @@
 @media (min-width: 960px) {
   .nav {
     padding: 0 2rem;
-    z-index: 999;
   }
 
   .menu {
